fixed button overlap on small screens

--- a/style.css
+++ b/style.css
@@ -253,13 +253,37 @@
     color: rgb(0, 151, 178);
     border-radius: 50px;
     padding: 10px 30px 10px 30px;
-    min-width: 292px;
+    min-width: 200px;
     margin-bottom: 10px;
 }
 .btn-contact:hover{
     border:solid;
     border-color: rgb(0, 151, 178);
     border-width: 5px;
+}
+
+@media (max-width:833){
+    .btn-contact{
+        margin-bottom: 35px;
+        font-size: 1.5rem;}
+    .hero-container-3{
+        margin: bottom 30px;
+        padding:bottom 30px;
+        height: 300px;
+        display:flex
+    }
+}
+
+@media (max-width: 400px) {
+    .btn-contact {
+        margin-bottom: 20px; 
+        font-size: 1.5rem; 
+        width: 100%; 
+    }
+    .tagline {
+        margin-top: 30px; 
+        font-size: 1rem; 
+    }
 }
   
   #form-toggler {
